force-app/main/default/objects/PublicComplaint.object
<CustomObject>
    <fields>
        <fullName>Method_of_Submission__c</fullName>
        <description>Method used to submit the comment.</description>
        <inlineHelpText>How the comment was submitted (online, email, mail, or in-person).</inlineHelpText>
        <label>Method of Submission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>In-Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_agency_response__c</fullName>
        <description>Formal reply from the agency, if applicable.</description>
        <inlineHelpText>Formal agency reply to this comment, if applicable.</inlineHelpText>
        <label>Agency Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_public_access__c</fullName>
        <description>Public access level for the comment.</description>
        <inlineHelpText>Public (externally visible) or Internal (agency only).</inlineHelpText>
        <label>Public Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <!-- CEQ Standard v1.2 additions -->
    <fields>
        <fullName>nepa_parent_document__c</fullName>
        <description>ContentDocumentId of the NEPA document this comment relates to (e.g., a Draft EIS). Stored as Text because Salesforce does not permit Lookup fields targeting ContentDocument/ContentVersion. Per CEQ standard Figure 1, comments are children of documents.</description>
        <inlineHelpText>ContentDocumentId of the NEPA document (e.g., Draft EIS) this comment was submitted in response to.</inlineHelpText>
        <label>Related Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_organization__c</fullName>
        <description>Optional organization affiliation of the commenter.</description>
        <inlineHelpText>Organization or affiliation of the commenter (optional).</inlineHelpText>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_category__c</fullName>
        <description>Optional category to organize types of comments or to tag comments based on the topics addressed in the comment. Supports AI-assisted comment analysis.</description>
        <inlineHelpText>Topic category or tag for this comment (supports automated comment analysis).</inlineHelpText>
        <label>Comment Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_date_submitted__c</fullName>
        <description>Date the comment was submitted. Verify whether the standard PSS PublicComplaint object has a native date field before using this custom field.</description>
        <inlineHelpText>Date this comment was submitted.</inlineHelpText>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>nepa_document_location_ref__c</fullName>
        <description>If applicable, the part of the document being referenced by the comment (e.g., section number, page number, or paragraph reference).</description>
        <inlineHelpText>Section, page, or paragraph of the document this comment addresses.</inlineHelpText>
        <label>Document Location Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_public_source__c</fullName>
        <description>Indicates whether this comment was submitted from a public source (vs. internal agency use).</description>
        <inlineHelpText>Check if this comment was submitted from a public source.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Public Source</label>
        <type>Checkbox</type>
    </fields>
    <!-- Priority 1: AI-Assisted Comment Analysis fields -->
    <fields>
        <fullName>nepa_sentiment__c</fullName>
        <description>AI-assigned sentiment classification for this comment.</description>
        <inlineHelpText>Sentiment of this comment as classified by AI analysis (human-validated).</inlineHelpText>
        <label>Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Supportive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Opposed</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nepa_is_substantive__c</fullName>
        <description>Indicates whether this comment is substantive and requires an individual agency response. AI-assigned, human-validated.</description>
        <inlineHelpText>Check if this comment is substantive and requires an individual response per NEPA requirements.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Is Substantive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nepa_cluster_id__c</fullName>
        <description>Groups near-duplicate form-letter comments for unified response. AI-assigned cluster identifier.</description>
        <inlineHelpText>Cluster ID grouping near-duplicate form letters for consolidated response tracking.</inlineHelpText>
        <label>Cluster ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_response_status__c</fullName>
        <description>Tracks the lifecycle of the agency response for this comment from draft through final.</description>
        <inlineHelpText>Current status of the agency response for this comment.</inlineHelpText>
        <label>Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <!-- Provenance fields (CEQ Standard v1.2 - required on all entities) -->
    <fields>
        <fullName>nepa_data_record_version__c</fullName>
        <description>The version of the record, for tracking updates or changes to the data.</description>
        <inlineHelpText>Version of this record for data exchange tracking.</inlineHelpText>
        <label>Data Record Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_agency__c</fullName>
        <description>The name of the agency or organization that provided the data.</description>
        <inlineHelpText>Agency or organization that provided this data.</inlineHelpText>
        <label>Data Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_data_source_system__c</fullName>
        <description>The system or database where the data originally came from.</description>
        <inlineHelpText>Source system or database for this record.</inlineHelpText>
        <label>Data Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_record_owner_agency__c</fullName>
        <description>The agency responsible for maintaining or owning this record.</description>
        <inlineHelpText>Agency responsible for owning and maintaining this record.</inlineHelpText>
        <label>Record Owner Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nepa_retrieved_timestamp__c</fullName>
        <description>The date and time when this record was retrieved from its source.</description>
        <inlineHelpText>Date and time this record was retrieved from its source system.</inlineHelpText>
        <label>Retrieved Timestamp</label>
        <type>DateTime</type>
    </fields>
    <!-- Portal submission fields -->
    <fields>
        <fullName>nepa_comment_body__c</fullName>
        <description>Full text of the public comment submitted via the portal or other channel.</description>
        <inlineHelpText>Full text of this public comment.</inlineHelpText>
        <label>Comment Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nepa_email__c</fullName>
        <description>Email address of the commenter, collected only when they opt in to receive notifications.</description>
        <inlineHelpText>Commenter email for notification opt-in (collected only with consent).</inlineHelpText>
        <label>Commenter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>nepa_pii_redacted__c</fullName>
        <description>Set to true once PII has been reviewed and the redacted body has been populated. Gates portal visibility — Experience Cloud users see only nepa_redacted_body__c when this is true.</description>
        <inlineHelpText>Check after completing PII review and populating the redacted body field.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>PII Redacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nepa_redacted_body__c</fullName>
        <description>Portal-safe version of the comment body with PII removed. Displayed to Experience Cloud public portal users. Populated by staff after PII review. Left blank until nepa_pii_redacted__c is set to true.</description>
        <inlineHelpText>Enter the PII-redacted version of the comment body for public portal display.</inlineHelpText>
        <label>Redacted Comment Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>