force-app/main/default/objects/PublicComplaint/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Stable external identifier for upsert operations. Format: DEMO_PC_NNN.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>