force-app/main/default/objects/PublicComplaint/fields/nepa_ai_confidence_score__c.field-meta.xml
<CustomField><fullName>nepa_ai_confidence_score__c</fullName>
        <description>Confidence score (0–100) returned by the Agentforce Comment Triage Agent. Values below 60 should trigger human review.</description>
        <inlineHelpText>AI confidence score 0–100. Lower scores indicate uncertain classifications.</inlineHelpText>
        <label>AI Confidence Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>