force-app/main/default/objects/PublicComplaint/fields/nepa_ai_generated__c.field-meta.xml
<CustomField>
    <fullName>nepa_ai_generated__c</fullName>
    <description>Set to true by NEPA_Comment_AI_Router when the comment classification, substantive determination, or response draft was AI-generated or substantially AI-modified. When true, blocks Resolved status until nepa_human_validated_by__c is populated. Satisfies OMB M-25-21 human-in-the-loop accountability requirement for AI-assisted federal decisions. Source: NAEP/PNNL 2025 AI Workshop three case studies.</description>
    <inlineHelpText>AI generated or modified this classification. Human validation required before resolving.</inlineHelpText>
    <label>AI Generated</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>