force-app/main/default/objects/PublicComplaint/fields/nepa_ai_triage_rationale__c.field-meta.xml
<CustomField><fullName>nepa_ai_triage_rationale__c</fullName>
        <description>1–2 sentence rationale written by the AI when marking a comment non-substantive, explaining the NEPA criteria that led to that determination. Mandatory when nepa_is_substantive__c = false.</description>
        <inlineHelpText>AI explanation of substantive/non-substantive determination. Required when non-substantive.</inlineHelpText>
        <label>AI Triage Rationale</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </CustomField>