force-app/main/default/objects/PublicComplaint/fields/nepa_ai_triage_status__c.field-meta.xml
<CustomField>
    <fullName>nepa_ai_triage_status__c</fullName>
    <description>Lifecycle status of AI triage processing for this comment. Set by NEPA_Comment_AI_Router flow on insert. Null = not yet evaluated; Queued = scheduled for async AI triage; EJ-Routed = EJ/tribal gate triggered and routed to specialist; Classified = AI triage complete; Human-Review = routed for human review.</description>
    <inlineHelpText>AI triage status: Null = pending, Queued = awaiting AI, EJ-Routed = EJ/tribal specialist queue, Classified = AI complete, Human-Review = escalated.</inlineHelpText>
    <label>AI Triage Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>EJ-Routed</fullName>
            </value>
            <value>
                <fullName>Classified</fullName>
            </value>
            <value>
                <fullName>Human-Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>