force-app/main/default/objects/PublicComplaint/fields/nepa_ai_triage_timestamp__c.field-meta.xml
<CustomField><fullName>nepa_ai_triage_timestamp__c</fullName>
        <description>Date and time the Agentforce Comment Triage Agent completed its analysis. Used for audit trail and performance monitoring.</description>
        <inlineHelpText>When AI triage was completed.</inlineHelpText>
        <label>AI Triage Timestamp</label>
        <type>DateTime</type>
    </CustomField>