force-app/main/default/objects/PublicComplaint/fields/nepa_duplicate_of__c.field-meta.xml
<CustomField>
    <fullName>nepa_duplicate_of__c</fullName>
    <description>Reference to the original PublicComplaint record that this comment is a near-duplicate of, as detected by NEPA_Comment_Duplicate_Check flow. Set when nepa_is_duplicate__c = true. Supports administrative record deduplication and response consolidation.</description>
    <inlineHelpText>Original comment record this submission duplicates. Set by AI duplicate detection. Review both records before responding.</inlineHelpText>
    <label>Duplicate Of</label>
    <referenceTo>PublicComplaint</referenceTo>
    <relationshipLabel>Duplicate Submissions</relationshipLabel>
    <relationshipName>Duplicate_Submissions</relationshipName>
    <type>Lookup</type>
</CustomField>