force-app/main/default/objects/PublicComplaint/fields/nepa_human_override__c.field-meta.xml
<CustomField><fullName>nepa_human_override__c</fullName>
        <description>Set to true by a human reviewer when they override the AI's substantive/sentiment classification. Enables systematic measurement of AI bias patterns by zip code, commenter type, or project.</description>
        <inlineHelpText>Check if a human reviewer has overridden the AI classification.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Human Override Applied</label>
        <type>Checkbox</type>
    </CustomField>