force-app/main/default/objects/PublicComplaint/fields/nepa_human_validated_by__c.field-meta.xml
<CustomField>
    <fullName>nepa_human_validated_by__c</fullName>
    <description>Lookup to the User who validated the AI-generated triage, classification, or response for this comment. Required before the comment can be set to Resolved when nepa_ai_generated__c = true. Provides administrative record audit trail per OMB M-25-21 AI accountability requirements. Human reviewer confirms the AI output is accurate before it becomes part of the administrative record.</description>
    <inlineHelpText>User who validated the AI-generated content. Required when AI Generated = true.</inlineHelpText>
    <label>Human Validated By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AI-Validated Comments</relationshipLabel>
    <relationshipName>AI_Validated_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>