force-app/main/default/objects/PublicComplaint/fields/nepa_is_duplicate__c.field-meta.xml
<CustomField>
    <fullName>nepa_is_duplicate__c</fullName>
    <description>Set to true by NEPA_Comment_Duplicate_Check flow when this comment is substantially similar to an existing PublicComplaint submitted for the same process within the past 30 days. Duplicate comments are still counted and tracked but are flagged for response consolidation rather than individual substantive review.</description>
    <inlineHelpText>Substantially similar to a prior comment on this process. Flagged for response consolidation. See Duplicate Of field for original record.</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Duplicate Comment</label>
    <type>Checkbox</type>
</CustomField>