force-app/main/default/objects/PublicComplaint/fields/nepa_litigation_threat_basis__c.field-meta.xml
<CustomField><fullName>nepa_litigation_threat_basis__c</fullName>
        <description>AI-generated explanation of why this comment was flagged as a potential Vermont Yankee issue exhaustion comment. Should identify: the specific legal or technical standard cited, the specific inadequacy alleged, and why this rises to the level of a legally specific objection rather than a general substantive concern. Written by the NEPA_Comment_Triage Agent alongside the flag.</description>
        <inlineHelpText>AI explanation of the litigation threat: what legal/technical standard was cited, what inadequacy was alleged, and why this may set up a future APA challenge.</inlineHelpText>
        <label>Litigation Threat Basis</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>