force-app/main/default/objects/PublicComplaint/fields/nepa_plaintiff_risk_flag__c.field-meta.xml
<CustomField>
    <fullName>nepa_plaintiff_risk_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true by NEPA_Plaintiff_Intelligence flow when the commenter organization matches a record in NEPA_Plaintiff_Profile__mdt. Triggers auto-creation of a Legal Defensibility Review task for HIGH and VERY_HIGH matches. Read-only after flow execution.</description>
    <inlineHelpText>Plaintiff org matched against litigation history. Set automatically by Plaintiff Intelligence flow.</inlineHelpText>
    <label>Plaintiff Risk Flag</label>
    <type>Checkbox</type>
</CustomField>