force-app/main/default/objects/PublicComplaint/fields/nepa_related_process__c.field-meta.xml
<CustomField><fullName>nepa_related_process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the IndividualApplication (NEPA process) this comment was submitted against. Required for the NEPA_Comment_Period_Gate before-save flow and the NEPA_Comment_Period_Closed validation rule to enforce exact-minute comment period deadlines without human admin intervention.</description>
        <inlineHelpText>The NEPA process (IndividualApplication) this comment responds to. Set by the portal OmniScript on submission.</inlineHelpText>
        <label>Related NEPA Process</label>
        <referenceTo>IndividualApplication</referenceTo>
        <relationshipLabel>Public Comments</relationshipLabel>
        <relationshipName>Public_Comments</relationshipName>
        <type>Lookup</type>
    </CustomField>