force-app/main/default/objects/PublicComplaint/fields/nepa_requires_human_review__c.field-meta.xml
<CustomField><fullName>nepa_requires_human_review__c</fullName>
        <description>Set to true by the EJ detector gate when the comment mentions tribal sovereignty, sacred sites, environmental justice communities, low-income impact, or civil rights. Bypasses AI categorization and routes to a human EJ/Tribal Liaison coordinator.</description>
        <inlineHelpText>Flagged for mandatory human review. Set automatically when EJ/tribal/civil-rights triggers are detected.</inlineHelpText>
        <defaultValue>false</defaultValue>
        <label>Requires Human Review</label>
        <type>Checkbox</type>
    </CustomField>