force-app/main/default/objects/PublicComplaint/fields/nepa_tribal_plaintiff_flag__c.field-meta.xml
<CustomField>
    <fullName>nepa_tribal_plaintiff_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the matched NEPA_Plaintiff_Profile__mdt record has Is_Tribal_Nation__c = true. Fires unconditionally regardless of risk tier — triggers the government-to-government consultation hard gate and NHPA Section 106 work order. Cannot be cleared without supervisor override. Satisfies the EJ/Tribal unconditional gate requirement.</description>
    <inlineHelpText>Tribal Nation commenter detected. Triggers unconditional Section 106 / E.O. 13175 consultation gate.</inlineHelpText>
    <label>Tribal Plaintiff Flag</label>
    <type>Checkbox</type>
</CustomField>